Scan result returns resultClass